--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
-	{
+{
   "name": "fix2json",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Command-line utility to present FIX protocol messages as JSON",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,10 +13,12 @@
     "fix2json": "fix2json.js"
   },
   "author": "SunGard Consulting Services",
-  "contributors": [{
-  	"name": "Salvatore Sferrazza",
-  	"email": "salvatore.sferrazza@sungard.com"
-  }],  
+  "contributors": [
+    {
+      "name": "Salvatore Sferrazza",
+      "email": "salvatore.sferrazza@sungard.com"
+    }
+  ],
   "license": "MIT",
   "preferGlobal": "true",
   "dependencies": {
