fix typo in package.json + minor sprucing

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "xmldom": "~0.1.19",
     "xpath": "~0.0.9",
     "node-xml": "~1.0.2",
-    "string-decoder": "~0.10.31"
+    "string_decoder": "~0.10.31"
   },
   "keywords": [
     "FIX",
