--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   "license": "MIT",
   "preferGlobal": "true",
   "dependencies": {
+    "underscore": "~1.7.0",
     "xmldom": "~0.1.19",
     "xpath": "~0.0.9",
     "node-xml": "~1.0.2",
-    "string_decoder": "~0.10.31",
-    "underscore": "~@1.7.0"
+    "string_decoder": "~0.10.31"
   },
   "keywords": [
     "FIX",
