package JSON author

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "fix2json": "fix2json.js",
 	"fix2yaml": "fix2json.js"
   },
-  "author": "SunGard Consulting Services",
+  "author": "FIS Advanced Technology",
   "contributors": [
     {
       "name": "Salvatore Sferrazza",
